--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,9 +18,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-      - run: npm install
-      - run: echo "Starting lint check for frontend."
-      - run: npm run lint
+      - run: npm install && echo "Starting lint check for frontend." && npm run lint
 
   lint-backend:
     runs-on: ubuntu-latest
@@ -33,8 +31,8 @@ jobs:
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: 8.0.x
-      - run: echo "Starting lint check for backend."
-      - run: dotnet format --verify-no-changes
+      - run: echo "Starting lint check for backend." && dotnet format --verify-no-changes
+
   docker-lint:
     runs-on: ubuntu-latest
     steps:
@@ -54,13 +52,11 @@ jobs:
 
       - name: Frontend Security Audit
         working-directory: frontend
-        run: echo "Starting frontend security audit."
-        run: npm audit --audit-level=moderate || true
+        run: echo "Starting frontend security audit." && npm audit --audit-level=moderate || true
 
       - name: Backend Security Check
         working-directory: backend/TreningVida.API
-        run: echo "Starting backend security check."
-        run: dotnet list package --vulnerable || true
+        run: echo "Starting backend security check." && dotnet list package --vulnerable || true
 
   test:
     runs-on: ubuntu-latest
@@ -70,15 +66,14 @@ jobs:
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: 8.0.x
-      - run: echo "Starting backend testing."
-      - run: dotnet test ./backend
+      - run: echo "Starting backend testing." && dotnet test ./backend
 
       - name: Frontend testing
         uses: actions/setup-node@v4
         with:
           node-version: 20
-      - run: echo "Starting frontend testing."
       - run: |
+          echo "Starting frontend testing."
           cd frontend
           npm install
           npm test -- --watchAll=false
@@ -92,16 +87,14 @@ jobs:
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: 8.0.x
-      - run: echo "Starting backend build"
-      - run: dotnet build ./backend/TreningVida.API --configuration Release
+      - run: echo "Starting backend build" && dotnet build ./backend/TreningVida.API --configuration Release
 
       - name: Frontend build
         uses: actions/setup-node@v4
         with:
           node-version: 20
-
-      - run: echo "Starting frontend build"
       - run: |
+          echo "Starting frontend build"
           cd frontend
           npm install
           npm run build
