--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,10 @@ on:
   pull_request:
     branches: [ "master" ]
 
+env:
+  DOCKER_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
+  DOCKER_TOKEN: ${{ secrets.DOCKER_HUB_TOKEN }}
+
 jobs:
   lint:
     runs-on: ubuntu-latest
@@ -110,19 +114,23 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_TOKEN }}
+          username: $DOCKER_USERNAME
+          password: $DOCKER_TOKEN 
 
       - name: Build and push frontend
         uses: docker/build-push-action@v5
         with:
           push: true
-          tags: raldesedlar/eye-training-frontend:latest
+          tags: |
+            $DOCKER_USERNAME/eye-training-frontend:latest
+            $DOCKER_USERNAME/eye-training-frontend:${{ github.sha }}
           context: ./frontend/eye-training
 
       - name: Build and push backend
         uses: docker/build-push-action@v5
         with:
           push: true
-          tags: raldesedlar/eye-training-backend:latest
+          tags: |
+            $DOCKER_USERNAME/eye-training-backend:latest
+            $DOCKER_USERNAME/eye-training-backend:${{ github.sha }}
           context: ./backend
