--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,6 @@ on:
 env:
   DOCKER_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
   DOCKER_TOKEN: ${{ secrets.DOCKER_HUB_TOKEN }}
-
 jobs:
   lint:
     runs-on: ubuntu-latest
@@ -114,16 +113,16 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: $DOCKER_USERNAME
-          password: $DOCKER_TOKEN 
+          username: ${{ env.DOCKER_USERNAME }}
+          password: ${{ env.DOCKER_TOKEN }}
 
       - name: Build and push frontend
         uses: docker/build-push-action@v5
         with:
           push: true
           tags: |
-            $DOCKER_USERNAME/eye-training-frontend:latest
-            $DOCKER_USERNAME/eye-training-frontend:${{ github.sha }}
+            ${{ env.DOCKER_USERNAME }}/eye-training-frontend:latest
+            ${{ env.DOCKER_USERNAME }}/eye-training-frontend:${{ github.sha }}
           context: ./frontend/eye-training
 
       - name: Build and push backend
@@ -131,6 +130,7 @@ jobs:
         with:
           push: true
           tags: |
-            $DOCKER_USERNAME/eye-training-backend:latest
-            $DOCKER_USERNAME/eye-training-backend:${{ github.sha }}
+            ${{ env.DOCKER_USERNAME }}/eye-training-backend:latest
+            ${{ env.DOCKER_USERNAME }}/eye-training-backend:${{ github.sha }}
+
           context: ./backend
