--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,7 @@ on:
 env:
   DOCKER_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
   DOCKER_TOKEN: ${{ secrets.DOCKER_HUB_TOKEN }}
+
 jobs:
   lint:
     runs-on: ubuntu-latest
@@ -82,6 +83,7 @@ jobs:
           npm run test
 
   build:
+    if: github.event_name == 'push' && github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -105,6 +107,7 @@ jobs:
           npm run build
 
   docker-build-push:
+    if: github.event_name == 'push' && github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
     needs: [lint, test, security, build]
     steps:
