--- a/frontend/eye-training/Dockerfile
+++ b/frontend/eye-training/Dockerfile
@@ -1,20 +1,10 @@
-FROM node:20 AS build
+FROM node:20
 WORKDIR /app
 
-COPY ./package*.json ./
+COPY package*.json ./
 RUN npm install --legacy-peer-deps
-
-WORKDIR /app
 
 COPY . ./
 
-RUN npm run build
-
-FROM node:20-slim AS runtime
-WORKDIR /app
-
-RUN npm install -g serve@14.2.5
-COPY --from=build /app/dist ./dist
 EXPOSE 3000
-CMD ["serve", "-s", "dist", "-l", "3000"]
-
+CMD ["npm", "run", "dev", "--", "--host", "0.0.0.0", "--port", "3000"]
