--- a/backend/eye-training.API/appsettings.json
+++ b/backend/eye-training.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433;Database=database;User Id=sa;Password=!IwillneverlosE1337!;TrustServerCertificate=True"
+  }
 }
